# python-legos

./: README.md
aoc-2024/: 1.py  2.py  2b.py
audio-trimmer/: app.py  pyproject.toml
blockchain/: pyproject.toml
blockchain/node/: __main__.py
blockchain/node/core/: api.py  block.py  blockchain.py
decryption/: app.py  pyproject.toml
ds-and-algos/: 1_grading_students.py  2_tree_traversal.py  3_binary_search_tree.py  4_dfs.py
gpt-tts/: main.py  pyproject.toml
image-cli/: .gitignore  README.md  pyproject.toml
image-cli/image_cli/: __main__.py  command.py
learn-elasticsearch/: docker-compose.yaml  pyproject.toml
learn-elasticsearch/dsl/: 1-basic-text-keyword  2-text-keyword  3-update_mapping  4-search
learn-langchain/: README.md  main.py  pyproject.toml  qa_chain.py
learn-langchain/datasets/: ExpenseLogService.kt
learn-pandas/: main.py  pyproject.toml
learn-pandas/datasets/: orders.csv  users.csv
learn-streamlit/: pyproject.toml  stroke_dashboard.py
simple-etl/: .gitignore  pyproject.toml
simple-etl/simple_etl/: __main__.py
simple-log/: pyproject.toml
simple-log/simple_log/: __main__.py
srt-parser/: app.py  pyproject.toml
todo-cli/: .gitignore  README.md  pyproject.toml
todo-cli/todo_cli/: __main__.py  command.py
video-creator/: .gitignore  pyproject.toml
video-creator/app/: __main__.py
video-extender/: .gitignore  pyproject.toml
video-extender/app/: __main__.py
