[tool.poetry]
name = "decryption"
version = "0.1.0"
description = ""
authors = ["irayspace <irayspacii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^43.0.1"
streamlit = "^1.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
