[tool.poetry]
name = "image-cli"
version = "0.1.0"
description = ""
authors = ["irayspace <irayspacii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pdf2image = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
