[project]
name = "learn-langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "irayspace",email = "irayspacii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "streamlit (>=1.46.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
