[tool.poetry]
name = "simple-etl"
version = "0.1.0"
description = ""
authors = ["irayspace <irayspacii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
pandera = "^0.17.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
